<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/light_blue"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/navigation_menu" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/dark_red">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageView
                        android:id="@+id/menu_opener_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/menu_50" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="70dp"
                        android:fontFamily="@font/comfortaa"
                        android:text="User Profile"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/dark_red"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/ImageView_Profile_Image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/profile" />

                <TextView
                    android:id="@+id/TextView_FullName_Main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="23dp"
                    android:layout_toRightOf="@id/ImageView_Profile_Image"
                    android:fontFamily="@font/bungee"
                    android:includeFontPadding="false"
                    android:text="@string/vishal_makhijani"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/TextView_UserName_Main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TextView_FullName_Main"
                    android:layout_marginLeft="23dp"
                    android:layout_toRightOf="@id/ImageView_Profile_Image"
                    android:text="@string/vishal_makhijani"
                    android:textSize="14sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="40dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout_FullName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/full_name_input">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditInputEditText_Fullname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/user_20"
                        android:drawablePadding="10dp"
                        android:text="@string/vishal_makhijani"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout_Email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/email_input">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditInputEditText_Email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/email_20"
                        android:drawablePadding="10dp"
                        android:inputType="textEmailAddress"
                        android:text="@string/dev_email"
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout_Password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditInputEditText_Password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/weight_20"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword"
                        android:text="******"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout_Gender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/gender">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditInputEditText_Gender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/gender_20"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:text="Male"
                        tools:ignore="TouchTargetSizeCheck" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout_DOB"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Date Of Birth">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditInputEditText_DOB"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/dob_20"
                        android:drawablePadding="10dp"
                        android:inputType="date"
                        android:text="10/30/2001"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout_Age"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Age">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditInputEditText_Age"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/age"
                        android:drawablePadding="10dp"
                        android:inputType="number"
                        android:text="20 Years"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout_Height"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Height">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditInputEditText_Height"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/height_20"
                        android:drawablePadding="10dp"
                        android:nextFocusUp="@color/dark_red"
                        android:text="9 Feet" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout_Weight"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/weight">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditInputEditText_Weight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/weight_20"
                        android:drawablePadding="10dp"
                        android:text="20 Kg" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    app:cardBackgroundColor="@color/dark_red"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="100dp">

                    <Button
                        android:id="@+id/Profile_Update_Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#c0392b"
                        android:fontFamily="@font/bungee"
                        android:text="@string/update_profile"
                        android:textSize="14dp" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>