<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".UserAccount.ForgetPassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        <ImageView-->
<!--            android:id="@+id/forget_password_back_btn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="5dp"-->
<!--            android:src="@drawable/back_30"-->
<!--            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />-->
        <TextView
            android:id="@+id/Button_Create_Account_From_Forget_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/create_an_account"
            android:layout_gravity="end"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <ImageView
            android:id="@+id/forget_password_icon"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:src="@drawable/fingerprint_scan" />

        <TextView
            android:id="@+id/forget_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/muli_black"
            android:gravity="center"
            android:includeFontPadding="false"
                android:text="@string/forget_npassword"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/forget_password_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli"
            android:gravity="center"
            android:text="Provide your account's email to reset your password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="212dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forget_password_Email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_email"
                android:textColorHint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditInputEditText_Email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/forget_password_next_btn"
                android:background="@drawable/rounded_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_Email"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Send Link"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/login_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forget_password_next_btn"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="116dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="126dp"
                android:layout_marginBottom="33dp"
                android:drawableLeft="@drawable/baseline_arrow_back_24"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="back to login"
                android:textColor="@color/black" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>

